# vm-concept

./: CMakeLists.txt  LICENSE
Asmc/: CMakeLists.txt  asmc.cpp
Identifiers/: CMakeLists.txt
Identifiers/include/: identifiers.h
Smoke tests/: test.asm
Vmc/: CMakeLists.txt  Vmc.cpp  Vmc.h  demoApp.cpp
Vmc/private/: FlagRegister.h  Stack.h
